--- a/archives/toutiao-search/2023-12-04.md
+++ b/archives/toutiao-search/2023-12-04.md
@@ -1,59 +1,78 @@
 # 2023-12-04
 
-共 162 条
+共 176 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Mon Dec 04 2023 10:21:02 GMT+0800 (China Standard Time) -->
+<!-- 最后更新时间 Mon Dec 04 2023 11:00:36 GMT+0800 (China Standard Time) -->
+1. [菲律宾7.4级强震后共录得955次余震](https://so.toutiao.com/search?keyword=菲律宾7.4级强震后共录得955次余震)
 1. [华为汽车“夺嫡之争”来了](https://so.toutiao.com/search?keyword=华为汽车“夺嫡之争”来了)
-1. [董宇辉现身清华做全英文演讲](https://so.toutiao.com/search?keyword=董宇辉现身清华做全英文演讲)
 1. [我国第十个国家宪法日](https://so.toutiao.com/search?keyword=我国第十个国家宪法日)
 1. [丁俊晖惜败奥沙利文](https://so.toutiao.com/search?keyword=丁俊晖惜败奥沙利文)
-1. [寻子成功富豪解克锋名下有多家公司](https://so.toutiao.com/search?keyword=寻子成功富豪解克锋名下有多家公司)
-1. [五月天方疑回应假唱质疑](https://so.toutiao.com/search?keyword=五月天方疑回应假唱质疑)
-1. [芬兰总统希望中国提供帮助](https://so.toutiao.com/search?keyword=芬兰总统希望中国提供帮助)
-1. [狗主人拿链锁狗被疯狂攻击](https://so.toutiao.com/search?keyword=狗主人拿链锁狗被疯狂攻击)
+1. [董宇辉现身清华做全英文演讲](https://so.toutiao.com/search?keyword=董宇辉现身清华做全英文演讲)
+1. [42岁女子经历20天“断崖式衰老”](https://so.toutiao.com/search?keyword=42岁女子经历20天“断崖式衰老”)
 1. [五月天假唱鉴定](https://so.toutiao.com/search?keyword=五月天假唱鉴定)
-1. [美国客户展示自己的繁体中文名](https://so.toutiao.com/search?keyword=美国客户展示自己的繁体中文名)
-1. [重庆一家四口因烧炭中毒？假的](https://so.toutiao.com/search?keyword=重庆一家四口因烧炭中毒？假的)
+1. [举报者称五月天直播公告混淆视听](https://so.toutiao.com/search?keyword=举报者称五月天直播公告混淆视听)
+1. [芬兰总统希望中国提供帮助](https://so.toutiao.com/search?keyword=芬兰总统希望中国提供帮助)
+1. [“流感神药”火了 医生提醒别乱用](https://so.toutiao.com/search?keyword=“流感神药”火了+医生提醒别乱用)
 1. [解清帅重回25年前被偷的地方](https://so.toutiao.com/search?keyword=解清帅重回25年前被偷的地方)
 1. [教师长期强奸5名女学生被执行死刑](https://so.toutiao.com/search?keyword=教师长期强奸5名女学生被执行死刑)
-1. [解清帅与爷爷坐在床头说笑](https://so.toutiao.com/search?keyword=解清帅与爷爷坐在床头说笑)
 1. [中国男子在乌克兰被判刑5年](https://so.toutiao.com/search?keyword=中国男子在乌克兰被判刑5年)
-1. [42岁女子经历20天“断崖式衰老”](https://so.toutiao.com/search?keyword=42岁女子经历20天“断崖式衰老”)
-1. [盲女背下8000个钢琴零件成调音师](https://so.toutiao.com/search?keyword=盲女背下8000个钢琴零件成调音师)
-1. [妻子将儿子包成花束给退伍丈夫惊喜](https://so.toutiao.com/search?keyword=妻子将儿子包成花束给退伍丈夫惊喜)
-1. [英维克：公司副总经理吴刚逝世](https://so.toutiao.com/search?keyword=英维克：公司副总经理吴刚逝世)
-1. [台名嘴谈“基建狂魔”即将打通天山](https://so.toutiao.com/search?keyword=台名嘴谈“基建狂魔”即将打通天山)
-1. [丁俊晖输掉比赛却找回自我](https://so.toutiao.com/search?keyword=丁俊晖输掉比赛却找回自我)
-1. [专家：朝鲜的回应让美韩后脖子一凉](https://so.toutiao.com/search?keyword=专家：朝鲜的回应让美韩后脖子一凉)
-1. [大学生还是对《一念关山》下手了](https://so.toutiao.com/search?keyword=大学生还是对《一念关山》下手了)
+1. [红十字会敦促避免加沙平民伤亡](https://so.toutiao.com/search?keyword=红十字会敦促避免加沙平民伤亡)
+1. [燃气管道有火花 男子喊醒邻居转移](https://so.toutiao.com/search?keyword=燃气管道有火花+男子喊醒邻居转移)
+1. [狗主人拿链锁狗被疯狂攻击](https://so.toutiao.com/search?keyword=狗主人拿链锁狗被疯狂攻击)
+1. [女孩离世捐肝肾救3名儿童](https://so.toutiao.com/search?keyword=女孩离世捐肝肾救3名儿童)
+1. [广东省税务局原副局长胡金木被查](https://so.toutiao.com/search?keyword=广东省税务局原副局长胡金木被查)
 1. [女子喂女儿吃鸡蛋时发现异物](https://so.toutiao.com/search?keyword=女子喂女儿吃鸡蛋时发现异物)
+1. [专家：朝鲜的回应让美韩后脖子一凉](https://so.toutiao.com/search?keyword=专家：朝鲜的回应让美韩后脖子一凉)
+1. [寻子成功富豪解克锋名下有多家公司](https://so.toutiao.com/search?keyword=寻子成功富豪解克锋名下有多家公司)
+1. [妻子将儿子包成花束给退伍丈夫惊喜](https://so.toutiao.com/search?keyword=妻子将儿子包成花束给退伍丈夫惊喜)
+1. [粉丝礼物太多全红婵抱不过来](https://so.toutiao.com/search?keyword=粉丝礼物太多全红婵抱不过来)
 1. [比亚迪：黑公关举报奖励升至500万](https://so.toutiao.com/search?keyword=比亚迪：黑公关举报奖励升至500万)
-1. [西媒：年轻的佩尼亚再次作用关键](https://so.toutiao.com/search?keyword=西媒：年轻的佩尼亚再次作用关键)
+1. [媒体：女足更新换代必须同高手过招](https://so.toutiao.com/search?keyword=媒体：女足更新换代必须同高手过招)
+1. [大学生还是对《一念关山》下手了](https://so.toutiao.com/search?keyword=大学生还是对《一念关山》下手了)
+1. [台名嘴谈“基建狂魔”即将打通天山](https://so.toutiao.com/search?keyword=台名嘴谈“基建狂魔”即将打通天山)
+1. [侯柯赖的3位副手人选各有何特点](https://so.toutiao.com/search?keyword=侯柯赖的3位副手人选各有何特点)
+1. [三大指数涨跌互现 黄金股表现活跃](https://so.toutiao.com/search?keyword=三大指数涨跌互现+黄金股表现活跃)
 1. [合肥一小伙包机飞往黄山求婚](https://so.toutiao.com/search?keyword=合肥一小伙包机飞往黄山求婚)
+1. [好心给老人做免费米线不料被赖上](https://so.toutiao.com/search?keyword=好心给老人做免费米线不料被赖上)
+1. [江西一中学回应“学生不幸离世”](https://so.toutiao.com/search?keyword=江西一中学回应“学生不幸离世”)
+1. [丁俊晖输掉比赛却找回自我](https://so.toutiao.com/search?keyword=丁俊晖输掉比赛却找回自我)
+1. [LV新款6.9万元夹克酷似南宁校服](https://so.toutiao.com/search?keyword=LV新款6.9万元夹克酷似南宁校服)
+1. [大爷用打火机给自己“理发”](https://so.toutiao.com/search?keyword=大爷用打火机给自己“理发”)
+1. [美国女足今年13胜4平0负](https://so.toutiao.com/search?keyword=美国女足今年13胜4平0负)
+1. [胡正强已履新武警湖北省总队司令员](https://so.toutiao.com/search?keyword=胡正强已履新武警湖北省总队司令员)
+1. [河南濮阳回应马路用贴纸做盲道](https://so.toutiao.com/search?keyword=河南濮阳回应马路用贴纸做盲道)
+1. [媒体：中国女足输美国要先承认差距](https://so.toutiao.com/search?keyword=媒体：中国女足输美国要先承认差距)
+1. [山西长子县发生山火](https://so.toutiao.com/search?keyword=山西长子县发生山火)
+1. [博士后当交警15年后突然火了](https://so.toutiao.com/search?keyword=博士后当交警15年后突然火了)
+1. [河南一高速路段上空现不明飞行物](https://so.toutiao.com/search?keyword=河南一高速路段上空现不明飞行物)
+1. [前裁判谈那不勒斯vs国米争议判罚](https://so.toutiao.com/search?keyword=前裁判谈那不勒斯vs国米争议判罚)
+1. [也门海岸附近关键航道疑似发生爆炸](https://so.toutiao.com/search?keyword=也门海岸附近关键航道疑似发生爆炸)
+1. [英维克：公司副总经理吴刚逝世](https://so.toutiao.com/search?keyword=英维克：公司副总经理吴刚逝世)
+1. [朝鲜侦察卫星拍摄到白宫意味着什么](https://so.toutiao.com/search?keyword=朝鲜侦察卫星拍摄到白宫意味着什么)
+1. [手机靓号拍出2614万天价买家称拍错](https://so.toutiao.com/search?keyword=手机靓号拍出2614万天价买家称拍错)
+1. [白岩松谈学生在食堂站着吃饭](https://so.toutiao.com/search?keyword=白岩松谈学生在食堂站着吃饭)
+1. [车站回应男子未扫码坐按摩椅被驱赶](https://so.toutiao.com/search?keyword=车站回应男子未扫码坐按摩椅被驱赶)
+1. [加沙8岁女孩：我很多朋友都死了](https://so.toutiao.com/search?keyword=加沙8岁女孩：我很多朋友都死了)
+1. [五月天方疑回应假唱质疑](https://so.toutiao.com/search?keyword=五月天方疑回应假唱质疑)
+1. [美国客户展示自己的繁体中文名](https://so.toutiao.com/search?keyword=美国客户展示自己的繁体中文名)
+1. [重庆一家四口因烧炭中毒？假的](https://so.toutiao.com/search?keyword=重庆一家四口因烧炭中毒？假的)
+1. [解清帅与爷爷坐在床头说笑](https://so.toutiao.com/search?keyword=解清帅与爷爷坐在床头说笑)
+1. [盲女背下8000个钢琴零件成调音师](https://so.toutiao.com/search?keyword=盲女背下8000个钢琴零件成调音师)
+1. [西媒：年轻的佩尼亚再次作用关键](https://so.toutiao.com/search?keyword=西媒：年轻的佩尼亚再次作用关键)
 1. [公关总经理称比亚迪遭恶意抹黑](https://so.toutiao.com/search?keyword=公关总经理称比亚迪遭恶意抹黑)
 1. [利物浦本场4个进球全是死角](https://so.toutiao.com/search?keyword=利物浦本场4个进球全是死角)
-1. [朝鲜侦察卫星拍摄到白宫意味着什么](https://so.toutiao.com/search?keyword=朝鲜侦察卫星拍摄到白宫意味着什么)
 1. [专家谈财政投入医疗卫生有无最优解](https://so.toutiao.com/search?keyword=专家谈财政投入医疗卫生有无最优解)
-1. [“流感神药”火了 医生提醒别乱用](https://so.toutiao.com/search?keyword=“流感神药”火了+医生提醒别乱用)
 1. [金砖国家轮值主席国交接仪式举行](https://so.toutiao.com/search?keyword=金砖国家轮值主席国交接仪式举行)
-1. [好心给老人做免费米线不料被赖上](https://so.toutiao.com/search?keyword=好心给老人做免费米线不料被赖上)
 1. [韩国中学生毕业晚会跳科目三](https://so.toutiao.com/search?keyword=韩国中学生毕业晚会跳科目三)
 1. [米利托：国米在欧冠决赛得到了自信](https://so.toutiao.com/search?keyword=米利托：国米在欧冠决赛得到了自信)
-1. [河南濮阳回应马路用贴纸做盲道](https://so.toutiao.com/search?keyword=河南濮阳回应马路用贴纸做盲道)
-1. [LV新款6.9万元夹克酷似南宁校服](https://so.toutiao.com/search?keyword=LV新款6.9万元夹克酷似南宁校服)
 1. [小因扎吉：劳塔罗正在创造国米历史](https://so.toutiao.com/search?keyword=小因扎吉：劳塔罗正在创造国米历史)
 1. [范德萨：多么精彩的周末英超比赛](https://so.toutiao.com/search?keyword=范德萨：多么精彩的周末英超比赛)
 1. [西蒙尼式马竞17次客战巴萨未尝一胜](https://so.toutiao.com/search?keyword=西蒙尼式马竞17次客战巴萨未尝一胜)
-1. [车站回应男子未扫码坐按摩椅被驱赶](https://so.toutiao.com/search?keyword=车站回应男子未扫码坐按摩椅被驱赶)
-1. [燃气管道有火花 男子喊醒邻居转移](https://so.toutiao.com/search?keyword=燃气管道有火花+男子喊醒邻居转移)
 1. [曝马竞更衣室对菲利克斯庆祝不满](https://so.toutiao.com/search?keyword=曝马竞更衣室对菲利克斯庆祝不满)
-1. [河南一高速路段上空现不明飞行物](https://so.toutiao.com/search?keyword=河南一高速路段上空现不明飞行物)
 1. [切尔西获2023年第4场英超主场胜利](https://so.toutiao.com/search?keyword=切尔西获2023年第4场英超主场胜利)
 1. [福建泉州2名干部任上被查](https://so.toutiao.com/search?keyword=福建泉州2名干部任上被查)
-1. [粉丝礼物太多全红婵抱不过来](https://so.toutiao.com/search?keyword=粉丝礼物太多全红婵抱不过来)
 1. [阿诺德：我自己会认领那个任意球的](https://so.toutiao.com/search?keyword=阿诺德：我自己会认领那个任意球的)
-1. [媒体：女足更新换代必须同高手过招](https://so.toutiao.com/search?keyword=媒体：女足更新换代必须同高手过招)
 1. [热心市民下水救人却遭对方拖拽](https://so.toutiao.com/search?keyword=热心市民下水救人却遭对方拖拽)
 1. [解清帅妈妈晒儿子吃早餐](https://so.toutiao.com/search?keyword=解清帅妈妈晒儿子吃早餐)
 1. [媒体：公职人员退出公租房就完了吗](https://so.toutiao.com/search?keyword=媒体：公职人员退出公租房就完了吗)
@@ -72,7 +91,6 @@
 1. [也门胡塞武装称袭击2艘以色列船只](https://so.toutiao.com/search?keyword=也门胡塞武装称袭击2艘以色列船只)
 1. [萨索洛主帅回应穆里尼奥此前的言论](https://so.toutiao.com/search?keyword=萨索洛主帅回应穆里尼奥此前的言论)
 1. [“伊斯兰国”宣称对菲律宾爆炸负责](https://so.toutiao.com/search?keyword=“伊斯兰国”宣称对菲律宾爆炸负责)
-1. [手机靓号拍出2614万天价买家称拍错](https://so.toutiao.com/search?keyword=手机靓号拍出2614万天价买家称拍错)
 1. [倪萍发文感谢蔡磊夫妇](https://so.toutiao.com/search?keyword=倪萍发文感谢蔡磊夫妇)
 1. [南部战区回应美舰闯仁爱礁邻近海域](https://so.toutiao.com/search?keyword=南部战区回应美舰闯仁爱礁邻近海域)
 1. [时代峰峻辟谣时代少年团恋情](https://so.toutiao.com/search?keyword=时代峰峻辟谣时代少年团恋情)
@@ -88,7 +106,6 @@
 1. [广汽本田宣布裁员900人](https://so.toutiao.com/search?keyword=广汽本田宣布裁员900人)
 1. [富豪寻子：别让羡富心态歪了楼](https://so.toutiao.com/search?keyword=富豪寻子：别让羡富心态歪了楼)
 1. [胡锡进谈《我本是高山》争议](https://so.toutiao.com/search?keyword=胡锡进谈《我本是高山》争议)
-1. [白岩松谈学生在食堂站着吃饭](https://so.toutiao.com/search?keyword=白岩松谈学生在食堂站着吃饭)
 1. [美国“丑闻议员”回应被众议院驱逐](https://so.toutiao.com/search?keyword=美国“丑闻议员”回应被众议院驱逐)
 1. [阿里退出4家A股上市公司](https://so.toutiao.com/search?keyword=阿里退出4家A股上市公司)
 1. [正新鸡排称门店开关是正常现象](https://so.toutiao.com/search?keyword=正新鸡排称门店开关是正常现象)
@@ -98,7 +115,6 @@
 1. [亿万富豪被拐儿子将回归原生家庭](https://so.toutiao.com/search?keyword=亿万富豪被拐儿子将回归原生家庭)
 1. [年销量目标难完成 车市开启降价潮](https://so.toutiao.com/search?keyword=年销量目标难完成+车市开启降价潮)
 1. [女子深夜街头抱狗哭诉 狗突然暴起](https://so.toutiao.com/search?keyword=女子深夜街头抱狗哭诉+狗突然暴起)
-1. [女孩离世捐肝肾救3名儿童](https://so.toutiao.com/search?keyword=女孩离世捐肝肾救3名儿童)
 1. [宝宝在退伍爸爸背上眉开眼笑](https://so.toutiao.com/search?keyword=宝宝在退伍爸爸背上眉开眼笑)
 1. [多家金融机构被罚](https://so.toutiao.com/search?keyword=多家金融机构被罚)
 1. [未扫码坐按摩椅被驱赶 车站回应](https://so.toutiao.com/search?keyword=未扫码坐按摩椅被驱赶+车站回应)
@@ -113,7 +129,6 @@
 1. [《很想很想你》台词三观](https://so.toutiao.com/search?keyword=《很想很想你》台词三观)
 1. [胖东来回应超市限流](https://so.toutiao.com/search?keyword=胖东来回应超市限流)
 1. [媒体：市场基本没理会美联储的警告](https://so.toutiao.com/search?keyword=媒体：市场基本没理会美联储的警告)
-1. [菲律宾7.4级强震后共录得955次余震](https://so.toutiao.com/search?keyword=菲律宾7.4级强震后共录得955次余震)
 1. [俄外长：布林肯和博雷利是胆小鬼](https://so.toutiao.com/search?keyword=俄外长：布林肯和博雷利是胆小鬼)
 1. [扬州聚力打造三个超两千亿地标产业](https://so.toutiao.com/search?keyword=扬州聚力打造三个超两千亿地标产业)
 1. [12月5日起机票燃油附加费下调](https://so.toutiao.com/search?keyword=12月5日起机票燃油附加费下调)
@@ -148,7 +163,6 @@
 1. [小猫每天去面店要面条吃](https://so.toutiao.com/search?keyword=小猫每天去面店要面条吃)
 1. [法甲：里昂客场2-3朗斯继续垫底](https://so.toutiao.com/search?keyword=法甲：里昂客场2-3朗斯继续垫底)
 1. [被质疑牛蛙数量不够店主用骨头拼图](https://so.toutiao.com/search?keyword=被质疑牛蛙数量不够店主用骨头拼图)
-1. [加沙8岁女孩：我很多朋友都死了](https://so.toutiao.com/search?keyword=加沙8岁女孩：我很多朋友都死了)
 1. [男子称花368住酒店却没有床](https://so.toutiao.com/search?keyword=男子称花368住酒店却没有床)
 1. [一家人为解清帅补办26岁生日](https://so.toutiao.com/search?keyword=一家人为解清帅补办26岁生日)
 1. [GPT-4没通过图灵测试](https://so.toutiao.com/search?keyword=GPT-4没通过图灵测试)
